# django-gov-notify

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: CI-tests.yml
tests/: settings.py  test_backend.py
