[tool.poetry]
name = "django-gov-notify"
version = "0.6.0"
description = "A GOV.UK Notify flavoured Django email backend"
authors = ["Nick Smith <nick.smith@torchbox.com>"]
readme = "README.md"
homepage = "https://github.com/nimasmi/django-gov-notify"
repository = "https://github.com/nimasmi/django-gov-notify"
keywords = ["email", "Django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = ">=3.9"
django = ">=4.2"
notifications-python-client = "^8.1.0"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"
detect-secrets = "1.5.0"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
